...
                            <constraint firstItem="MW9-xO-1f0" firstAttribute="bottom" secondItem="Lnu-oI-u7x" secondAttribute="bottom" id="oUg-B3-mQk"/>
                            <constraint firstItem="wyw-tO-m8l" firstAttribute="leading" secondItem="MW9-xO-1f0" secondAttribute="leading" id="wEE-Xg-99N"/>
                            <constraint firstAttribute="trailing" secondItem="MW9-xO-1f0" secondAttribute="trailing" id="xij-2L-OcD"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Lnu-oI-u7x"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Transactions" image="transactions-tab-bar" id="WkC-sL-bw0"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="backdrop" destination="3sc-a9-XZo" id="4b4-cs-hcz"/>
                        <outlet property="overView" destination="oVu-kr-874" id="j06-Qq-O1v"/>
                        <outlet property="tableView" destination="MW9-xO-1f0" id="Ang-vb-bUD"/>
                        <outlet property="transactionsTextView" destination="0Yx-V2-trJ" id="Edb-Z2-lws"/>
...
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                        </subviews>
                        <color key="backgroundColor" red="0.90196078431372551" green="0.29411764705882354" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
                        <viewLayoutGuide key="safeArea" id="NCW-Z8-IZm"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Maps" image="maps-icon-tab-bar" id="tDJ-Mp-kBY"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="fetchingDataTextView" destination="dkG-Vh-SCD" id="5fV-C4-OY0"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ej5-K7-kH3" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                            <constraint firstItem="NkB-Yc-PkS" firstAttribute="trailing" secondItem="6CI-OR-5Cu" secondAttribute="trailing" id="nqC-fU-jkU"/>
                            <constraint firstItem="6CI-OR-5Cu" firstAttribute="top" secondItem="NkB-Yc-PkS" secondAttribute="bottom" constant="19" id="qlQ-Dx-AMN"/>
                            <constraint firstItem="h4w-AP-N0H" firstAttribute="leading" secondItem="9Oh-Su-PVp" secondAttribute="leadingMargin" id="xnQ-4c-Sar"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="JUs-NW-vH9"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Home" image="home-tab-bar" id="k0M-G7-3LO">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="boolean" keyPath="selectedItem" value="YES"/>
                        </userDefinedRuntimeAttributes>
                    </tabBarItem>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
...
                                    <action selector="tokenInput:" destination="sg1-Fo-LOa" eventType="editingDidEnd" id="I5H-4n-eMg"/>
                                </connections>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XIJ-qL-0Lf">
                                <rect key="frame" x="147" y="315" width="81" height="33"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Log In">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="logInButton:" destination="sg1-Fo-LOa" eventType="touchUpInside" id="KyI-Je-RLB"/>
                                </connections>
                            </button>
...
